# antimatter-IDE

./: ANTIMATTER_CODEBUNDLE.md  CONTRIBUTING.md  MANIFEST.txt  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  pipeline.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  dialog.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
apps/desktop/src-tauri/src/commands/: lsp.rs  mod.rs  provider.rs  pty.rs  settings.rs  vision.rs  workspace.rs
apps/desktop/src/components/agents/: AgentPanel.tsx  DiffPreviewCard.tsx  MarkdownRenderer.tsx
apps/desktop/src/components/editor/: EditorShell.tsx
apps/desktop/src/components/explorer/: FileExplorer.tsx  (+1 more)
apps/desktop/src/hooks/: useKeyboardShortcuts.ts  useLearnerMode.ts
apps/desktop/src/lib/: LspClient.ts  tauri.ts
apps/desktop/src/services/: CodebaseIndexer.ts  LearnerEngine.ts  indexer.worker.ts
apps/desktop/src/store/: appStore.ts
apps/desktop/src/styles/: global.css
src/: App.tsx  main.tsx
src/components/editor/: DiffReviewModal.tsx
src/components/explorer/: FileExplorer.tsx  SearchPanel.tsx  SourceControlPanel.tsx
src/components/layout/: MenuDropdown.tsx
src/components/settings/: SettingsDrawer.tsx
src/components/terminal/: BottomPanel.tsx
src/lib/: tauri.ts
src/services/: CodebaseIndexer.ts
(+10 files in other folders)
