[package]
name = "antimatter-desktop"
version = "0.1.0"
description = "Antimatter desktop shell"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "antimatter_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
keyring = "3"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
regex = "1"
screenshots = "0.8.10"
base64 = "0.22.0"
tokio = { version = "1", features = ["time"] }
